--- a/webapp/view/history.html
+++ b/webapp/view/history.html
@@ -26,10 +26,41 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="registerSucces">
-            <span>Konto Utworzone !</span>
-            <p> Na adres e-mail został wysłany link do aktywacji konta </p>
-            <br/><br/>
+    <main class="employee">
+        Historia wizyt :
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Data</th>
+                <th>Pracownik</th>
+                <th>Typ usługi</th>
+                <th>Ocena</th>
+                <th><p>########</p></th>
+            </tr>
+             <tr>
+                <th>Id}}</th>
+                <th>Produkty}}</th>
+                <th>Status}}</th>
+                <th>T yp}}</th>
+                <th> Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton"> Ponów wizytę</a></th>
+            </tr>
+        </table>
+        Bonusy :
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Data</th>
+                <th>Rodzaj</th>
+                <th>###########</th>
+            </tr>
+             <tr>
+                <th>{{Id }}</th>
+                <th>{{Data }}</th>
+                <th>{{Rodza j}}</th>
+                 <th><a ng-href="login.html" class="myButton"> Aktywuj</a></th>
+            </tr>
+        </table>
     </main>
         <center>
             <div class="content">
