--- a/webapp/view/reviewConfirm.html
+++ b/webapp/view/reviewConfirm.html
@@ -26,13 +26,15 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="registerSucces">
-            <span>Konto Utworzone !</span>
-            <p> Na adres e-mail został wysłany link do aktywacji konta </p>
+    <main class="confirmOpinion">
+            <span>Czy napewno chcesz wystawić opinie ?</span>
             <br/><br/>
     </main>
         <center>
-            <div class="content">
+            <div class="confirmButton">
+                <a ng-href="login.html" class="myButton">Zatwierdź !</a>
+            </div>
+            <div class="confirmButton">
                 <a ng-href="login.html" class="myButton">Powrót !</a>
             </div>
         </center>
