--- a/webapp/view/reviewShowAll.html
+++ b/webapp/view/reviewShowAll.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <ol>
+             <ol>
                 <li><p><a href="../index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
@@ -26,10 +26,37 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="registerSucces">
-            <span>Konto Utworzone !</span>
-            <p> Na adres e-mail został wysłany link do aktywacji konta </p>
-            <br/><br/>
+    <div class="employeeInfo">
+             <span>Wybierz pracownika aby przeczytać opinię !</span>
+        </div>
+    <main class="employee">
+         Wizyty oczekujące i ostatnie 
+         <table>
+            <tr>
+                <th>Number</th>
+                <th>Data</th>
+                <th>Status</th>
+                <th>Typ usługi</th>
+                <th>Ocena</th>
+                <th><p>########</p></th>
+            </tr>
+             <tr>
+                <th>{{Number}}</th>
+                <th>{{Data}}</th>
+                <th>{{Status Status Status}}</th>
+                <th>{{Typ usługi}}</th>
+                <th>{{Ocena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+            </tr>
+             <tr>
+                <th>{{Number}}</th>
+                <th>{{Data}}</th>
+                <th>{{Status Status Status}}</th>
+                <th>{{Typ usługi}}</th>
+                <th>{{Ocena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+            </tr>
+        </table>
     </main>
         <center>
             <div class="content">
