--- a/webapp/view/serviceAccepted.html
+++ b/webapp/view/serviceAccepted.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <ol>
+             <ol>
                 <li><p><a href="../index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
@@ -27,8 +27,8 @@
         </nav>
     </header>
     <main class="registerSucces">
-            <span>Konto Utworzone !</span>
-            <p> Na adres e-mail został wysłany link do aktywacji konta </p>
+            <span>Usługa Utworzona !</span>
+            <p> Zamówiłeś usługę, czekamy na ciebie ;) </p>
             <br/><br/>
     </main>
         <center>
