--- a/webapp/view/register.html
+++ b/webapp/view/register.html
@@ -13,15 +13,16 @@
 <body>
     <header>
         <nav>
-            <ol>
-                <li><p>Super salon usługowy</p></li>
-                <li><div class="button">OFERTA</div></li>
-                <li><div class="button">ZESPÓŁ</div></li>
-                <li><div class="button"><a ng-href="/about.html">O NAS </a></div></li>
-                <li><div class="button">OPINIE</div></li>
+             <ol>
+                <li><p><a href="../index.html">Super salon usługowy </a></p></li>
+                <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
+                <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
+                <li><div class="button"><a href="about.html">O NAS </a></div></li>
+                <li><div class="button"><a href="reviewShowAll.html">OPINIE
+                </a></div></li>
             </ol>
 <!--            zmienic na twoje konto-->
-            <a ng-href="/login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="../img/user2.png" height="35px"></div></a>
+            <a href="/login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="../img/user2.png" height="35px"></div></a>
             <div style="clear: both"> </div>
         </nav>
     </header>
