--- a/webapp/view/reviewRead.html
+++ b/webapp/view/reviewRead.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <ol>
+             <ol>
                 <li><p><a href="../index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
@@ -26,14 +26,19 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="registerSucces">
-            <span>Konto Utworzone !</span>
-            <p> Na adres e-mail został wysłany link do aktywacji konta </p>
+    <main class="makeOpinion">
+        <span>Data : getDate()</span>
+        <span>Pracownik : getPracownik() </span>
+        <span>Usługa : getService()</span>
+        <span>Opinia :<input type="number" max="10" min="1" value="3" disabled>
+        </span>
+        <span>Opis opinii : </span>
+        <textarea name="opinionText" cols="35" rows="2" disabled>Bylo bardzo drogo ale solidne wykonanie !</textarea>
             <br/><br/>
     </main>
         <center>
             <div class="content">
-                <a ng-href="login.html" class="myButton">Powrót !</a>
+                <a ng-href="login.html" class="myButton">Wyślij !</a>
             </div>
         </center>
 
