--- a/webapp/css/Style.css
+++ b/webapp/css/Style.css
@@ -263,7 +263,7 @@ main .registerPage a {
 .aboutUs {
     width: 35%;
     padding: 5%;
-    padding-bottom: 2%;
+    padding-bottom: 10%;
     letter-spacing: 1.3px;
     font-size: 1.2rem;
     display: inline-block;
@@ -278,7 +278,7 @@ main .registerPage a {
     /*fix*/
     background-image: url("../img/tlo2.png");
     background-size: cover;
-    margin-bottom: -10%;
+    margin-bottom: -5%;
 }
 /*REVIEW*/
 .makeOpinion {
@@ -339,7 +339,7 @@ main .registerPage a {
 .services .desc {
     width: 221px;
     height: 170px;
-    background-color: forestgreen;
+    background-color: #85b0da;
     border: 2px solid grey;
     border-radius: 4px;
     text-align: left;
