--- a/webapp/css/Style.css
+++ b/webapp/css/Style.css
@@ -337,26 +337,26 @@ main .registerPage a {
 }
 
 .services .desc {
-    width: 221px;
+    width: 225px;
     height: 170px;
     background-color: #85b0da;
-    border: 2px solid grey;
-    border-radius: 4px;
+    /*border: 2px solid grey;*/
+    /*border-radius: 4px;*/
     text-align: left;
 }
-.services .desc .myButton {
-    position: relative;
-    display: block;
+.services .myButton {
     width: 40%;
-    bottom: -30px;
-    left: 10px;
-    font-size: 1rem;
+    margin-top: 5%;
 }
 
 .services table th {
     padding: 20px;
 }
 
+.servicePackage {
+    border: 2px solid grey;
+    border-radius: 4px;
+}
 /*SERVICES DATE*/
 aside {
     float: left;
