--- a/webapp/css/Style.css
+++ b/webapp/css/Style.css
@@ -62,6 +62,10 @@ nav .button {
     
 }
 
+nav .pLink {
+    color: white;
+}
+
 nav .userFrame {
     width: 14%;
     float: left;
@@ -495,4 +499,19 @@ aside {
     font-size: 1.2rem;
     font-size: 1.2rem;
     color: white;
+}
+
+/*ADMIN INDEX*/
+.adminPane {
+    float: left;
+    width: 33%;
+    border-left: 4px solid blue;
+    min-height: 500px;
+}
+.adminPane:first-child {
+    border: 0;
+}
+
+.adminPane table {
+    font-size: 0.8rem;
 }
