--- a/webapp/css/Style.css
+++ b/webapp/css/Style.css
@@ -78,8 +78,8 @@ nav .userFrame {
 
 nav .userFrame img {
     display: inline-block;
-    width: 25%;
-    height: 35px;
+    height: 28px;
+    padding: 3px;
 }
 
 nav .userFrame span {
@@ -147,7 +147,7 @@ main .container h1 {
 footer {
     margin-top: 10%;
     width: 100%;
-    height:75px;
+    height:85px;
     background-color: #0688fa;  
     position: absolute;
     bottom: 0;
@@ -503,15 +503,55 @@ aside {
 
 /*ADMIN INDEX*/
 .adminPane {
+    width: 45%;
+    margin: auto;
     float: left;
-    width: 33%;
-    border-left: 4px solid blue;
-    min-height: 500px;
-}
-.adminPane:first-child {
-    border: 0;
 }
 
+.adminBlock {
+    height: 100%;
+    margin-bottom: 40px;
+}
+
+
 .adminPane table {
-    font-size: 0.8rem;
+    font-size: 1.1rem;
+    margin-bottom: 3%;
+    margin-top: 1%;
+}
+
+.adminPane .myButton {
+    margin-bottom: 2%;
+}
+
+.serviceChange .summary .myButton, .serviceChange .employeeInput .myButton, .serviceChange .myButton {
+    margin: 10%;
+        margin-top: 0;
+}
+
+.serviceChange .middlePane {
+    margin: auto;
+    width: 70%;
+    padding: 4.5%;
+}
+
+.serviceChange .middlePane input {
+    margin-top: 4px;
+    margin-bottom: 6px;
+
+}
+
+table {
+    background-color: black;
+}
+table th {
+    background-color: white;
+}
+.adminLink {
+    cursor: pointer;
+}
+
+.flaticon {
+    margin: 8px;
+    margin-left: 2%;
 }
